--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,21 @@ description: >-
   Utilities to write a client or server using the JSON-RPC 2.0 spec.
 homepage: https://github.com/dart-lang/json_rpc_2
 
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
   uuid: ^3.0.5
   stack_trace: ^1.10.0
   stream_channel: ^2.1.0
-  web_socket_channel: ^2.0.0
+  web_socket_channel:
+    git: 
+      url: https://github.com/hesheeat/web_socket_channel.git
+
+
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.16.0
+  flutter_lints: ^1.0.4
   
